# bwprotanalyzer

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
bwprotanalyzer/: __init__.py  __main__.py  proto.py
