[tool.poetry]
name = "bwprotanalyzer"
version = "1.0.2"
description = "Analysiert eine BWPROT20.DAT-Datei, liest Änderungen und stellt (falls gewünscht) eine lesbare Log-Datei zur Verfügung"
authors = ["cozyGalvinism <reallifejunkies@googlemail.com>"]

[tool.poetry.scripts]
bwprotanalyzer = 'bwprotanalyzer.__main__:main'

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
